Remarques plus corrections